--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>resources/mine 2.png</file>
         <file>resources/mine1.png</file>
         <file>resources/mine1_red.jpg</file>
+        <file>resources/mine.png</file>
     </qresource>
 </RCC>
